More elimination of Boolean constructors.
FindBugs.

-- Jon